preparo para apresentacao

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -45,9 +45,16 @@ html
               a(href='/blockchain') #{__('Blockchain')}
             li(class={active: page === 'distributed'})
               a(href='/distributed') #{__('Distributed')}
-            li(class={active: page === 'tokens'})
+            
+            li(class={active: page === 'simpletoken'})
+              a(href='/simpletoken') #{__('Tokens')}
+            li(class={active: page === 'simplecoinbase'})
+              a(href='/simplecoinbase') #{__('Coinbase')}
+
+            //li(class={active: page === 'tokens'})
               a(href='/tokens') #{__('Tokens')}
             li(class={active: page === 'coinbase'})
               a(href='/coinbase') #{__('Coinbase')}
+            
 
     block content
